--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -62,6 +62,7 @@ proptest-derive = "0.7.0"
 regex = "1.12"
 regress = "0.10.5"
 reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
+rsevents-extra = "0.2.2"
 schemars = "1"
 semver = "1.0.27"
 sentry = { version = "0.38.1", features = [
