--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -23,6 +23,7 @@ nix = { workspace = true, features = ["signal"] }
 pollster.workspace = true
 regex.workspace = true
 reqwest.workspace = true
+rsevents-extra.workspace = true
 serde_json.workspace = true
 serde_yaml.workspace = true
 serde_with.workspace = true
