chore(wip): executive-poc
Simplified version of `flox-activations` from:

- https://github.com/flox/flox/blob/7a0439bea5b96755b1e1192a64ff975bd30517a0/cli/flox/src/commands/activate-architecture-refactor.mmd

To verify:

- whether malloc after fork() is safe
- minimum requirements for the executive

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "mk_data",
     "systemd",
     "xtask",
+    "executive-poc"
 ]
 default-members = ["flox", "flox-watchdog", "flox-activations"]
 
