feat(executive): Call watchdog as library
Re-uses the existing watchdog code as a library to start the monitoring
loop and GC log threads.

We switch to file logging and close file descriptors immediately before,
so that it doesn't spam the current activation terminal, especially if
you've specified `-v` levels, and so that we have a record of logs when
the long-lived executive is running in the background.

Removes all of the machinery to build a separate `flox-watchdog` binary.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "systemd",
     "xtask",
 ]
-default-members = ["flox", "flox-watchdog", "flox-activations"]
+default-members = ["flox", "flox-activations"]
 
 resolver = "2"
 
@@ -34,6 +34,7 @@ flox-activations = { path = "flox-activations" }
 flox-core = { path = "flox-core" }
 flox-rust-sdk = { path = "flox-rust-sdk" }
 flox-test-utils = { path = "flox-test-utils" }
+flox-watchdog = { path = "flox-watchdog" }
 fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
