chore(activations): Convert to tracing
It only adds about 10M to `flox-watchdog`, so it should be about the
same for `flox-activations`, and it makes a bunch of things..

- no need to refactor `watchdog` to use logging where the macros behave
  slightly differently for fields
- makes log rotation easier, or possible
- makes it possible to switch out the STDOUT/STDERR logging for file
  logging before we start the watchdog

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -12,10 +12,11 @@ clap = { version = "4.5.51", default-features = false, features = [
     "error-context",
     "derive",
 ] }
-env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
+tracing-appender = "0.2"
 flox-core.workspace = true
 fslock.workspace = true
-log.workspace = true
 nix.workspace = true
 serde.workspace = true
 serde_json.workspace = true
