--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -23,7 +23,7 @@ serde.workspace = true
 serde_json.workspace = true
 shell-escape.workspace = true
 signal-hook.workspace = true
-time.workspace = true
+time = { workspace = true, features = ["macros"] }
 indoc.workspace = true
 is_executable.workspace = true
 itertools.workspace = true
