feat: add v2 flake package descriptor
This follows largely the same pattern as the v2 catalog descriptor. The
only other change of note here is that I've added a clippy lint that
disallows `toml_edit::de::from_str` by default. The rationale is that
the `Manifest::from_str` calls `toml_edit::de::from_str` internally,
but also applies certain checks and conversions that make calling
`toml_edit::de::from_str` alone insufficient for correct behavior.

--- a/cli/clippy.toml
+++ b/cli/clippy.toml
@@ -1,3 +1,6 @@
 # We have a bunch of errors above the default and some up to 160
 # Just change the threshold for now rather than doing a bunch of boxing
 large-error-threshold = 161
+disallowed-methods = [
+  { path = "toml_edit::de::from_str", reason = "Manifest::from_str does necessary v1 -> v2 conversions and checks"},
+]
