chore: update mock error transformations
The `darwin_ps_incompatible_transform_error_to_*` mock generators
attempt to transform the catalog api recordig of

```
flox init
tomlq --in-place --toml-output '.options.systems = [ "x86_64-darwin", "aarch64-linux" ]' .flox/env/manifest.toml
flox install darwin.ps  
```

by changing the error types produced by attempting
to resolve `darwin.ps` for aarch64-linux.

The `install` command performs 2 requests, once for aarch64-linux
and once for x86_64-darwin.
This results in two separate "when/then" objects
in the response yaml data:

```yaml
when:
  path: /api/v1/catalog/resolve
  method: POST
  body: ...
then:
  status: 200
  header:
    ...
  body: ...
---
when:
  path: /api/v1/catalog/resolve
  method: POST
  body: ...
then:
  status: 200
  header:
    ...
  body: ...
```

The previous transformation seems to expect only one block,
and combines both response bodies before replacing
both individual bodies with the combination of both:


```yaml
when:
  path: /api/v1/catalog/resolve
  method: POST
  body: ...
then:
  status: 200
  header:
    ...
  body: '<body 1>

  <body 2>'
---
when:
  path: /api/v1/catalog/resolve
  method: POST
  body: ...
then:
  status: 200
  header:
    ...
  body: '<body 1>

  <body 2>'
```

This in turn results in parsing errors which were unexpected by the tests
`locking_unknown_message`/`locking_general_message`,
which were in fact looking for the error types
transformed into the response.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -178,15 +178,15 @@ cmd = '''
 '''
 ignore_cmd_errors = true # build will fail on linux, that's fine
 post_cmd = '''
-    yq -r '.then.body' "$RESPONSE_FILE" | \
+    yq --slurp -r '.[0].then.body' "$RESPONSE_FILE" | \
         jq -c '
             .items[0].messages[].type |= "unknown" |
             .items[0].messages[].message |= "unknown message"
         ' \
         > patched_body.json
-    yq -y \
+    yq --slurp -y \
         --arg body "$(cat patched_body.json)" \
-        'del(.then.header[] | select(.name == "content-length")) | .then.body = $body' \
+        'del(.[0].then.header[] | select(.name == "content-length")) | .[0].then.body = $body | .[]' \
         "$RESPONSE_FILE" > tmp.yaml
     mv tmp.yaml "$RESPONSE_FILE"
 '''
@@ -206,15 +206,15 @@ cmd = '''
 '''
 ignore_cmd_errors = true # build will fail on linux, that's fine
 post_cmd = '''
-    yq -r '.then.body' "$RESPONSE_FILE" | \
+    yq --slurp -r '.[0].then.body' "$RESPONSE_FILE" | \
         jq -c '
             .items[0].messages[].type |= "general" |
             .items[0].messages[].message |= "general message"
         ' \
         > patched_body.json
-    yq -y \
+    yq --slurp -y \
         --arg body "$(cat patched_body.json)" \
-        'del(.then.header[] | select(.name == "content-length")) | .then.body = $body' \
+        'del(.[0].then.header[] | select(.name == "content-length")) | .[0].then.body = $body | .[]' \
         "$RESPONSE_FILE" > tmp.yaml
     mv tmp.yaml "$RESPONSE_FILE"
 '''
