--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -518,6 +518,14 @@ pre_cmd = '''
 '''
 cmd = "flox install zlib"
 
+[init.python_poetry_zlib_libstdc]
+files = ["init/python/common", "init/python/poetry"]
+pre_cmd = '''
+    cp -r {common,poetry}/* .
+    flox init --auto-setup
+'''
+cmd = "flox install zlib gcc-unwrapped"
+
 [init.python_pyproject_pip]
 files = ["init/python/common", "init/python/pyproject-pip"]
 pre_cmd = '''
@@ -533,6 +541,14 @@ pre_cmd = '''
 '''
 cmd = "flox install zlib"
 
+[init.python_pyproject_pip_zlib_libstdc]
+files = ["init/python/common", "init/python/pyproject-pip"]
+pre_cmd = '''
+    cp -r {common,pyproject-pip}/* .
+    flox init --auto-setup
+'''
+cmd = "flox install zlib gcc-unwrapped"
+
 [init.python_requirements]
 files = ["init/python/common", "init/python/requirements"]
 pre_cmd = '''
@@ -547,6 +563,14 @@ pre_cmd = '''
     flox init --auto-setup
 '''
 cmd = "flox install zlib"
+
+[init.python_requirements_zlib_libstdc]
+files = ["init/python/common", "init/python/requirements"]
+pre_cmd = '''
+    cp -r {common,requirements}/* .
+    flox init --auto-setup
+'''
+cmd = "flox install zlib gcc-unwrapped"
 
 [init.python_requests]
 pre_cmd = '''
