chore: ignore target/ directory written by rust-analyzer
The included release of rust analyzer seems to still observer the bug
reported in <https://github.com/rust-lang/rust-analyzer/issues/20821>,
despite being released well after the supposed fix
<https://github.com/rust-lang/rust-analyzer/pull/20920>.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /.flox
 /autom4te.cache/
 /cli/target
+# <https://github.com/rust-lang/rust-analyzer/issues/20821>
+/target
 /build/*
 compile_commands.json
 result
