--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -591,6 +591,45 @@ post_cmd = '''
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
 '''
 
+[envs.bash_v2_default]
+skip_if_output_exists = "envs/bash_v2_default"
+files = ["envs/bash_v2_default/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/bash_v2_default"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
+
+[envs.bash_v2_all]
+skip_if_output_exists = "envs/bash_v2_all"
+files = ["envs/bash_v2_all/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/bash_v2_all"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
+
+[envs.bash_v2_out]
+skip_if_output_exists = "envs/bash_v2_out"
+files = ["envs/bash_v2_out/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/bash_v2_out"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
+
 [envs.build_with_requests]
 skip_if_output_exists = "envs/build_with_requests"
 files = ["envs/build_with_requests/manifest.toml"]
