--- a/cli/flox-watchdog/Cargo.toml
+++ b/cli/flox-watchdog/Cargo.toml
@@ -13,6 +13,7 @@ fslock.workspace = true
 glob = "0.3.3"
 nix.workspace = true
 signal-hook.workspace = true
+time.workspace = true
 tracing.workspace = true
 tracing-appender.workspace = true
 tracing-subscriber.workspace = true
