feat: add Rust-based Nix builder
This adds an environment builder to replace the existing `builder.pl`
script, written in Rust to make maintenance easier for the team and to
take advantage of the richer standard library and type system.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "flox-test-utils",
     "mk_data",
     "systemd",
-    "xtask",
+    "xtask", "nix-builder",
 ]
 default-members = ["flox", "flox-watchdog", "flox-activations"]
 
