feat(activations): Handle state.json versions
Support future version changes to `state.json` by returning an error if
there are either:

- attached PIDs that are still running
- an executive PID that is still running

If neither of those are true then we can safely discard the existing
state and overwrite it with a new one of the new version. This happens
whilst still holding the file lock from the initial read.

This is a simpler variation of the `CheckedVersion` logic that we
previously had and no longer made sense once we required write
operations from the executive (nee watchdog) since 879bf96b8.

We don't need a struct or enum for other `ActivationState` versions at
the moment because we can't predict what changes we might need in the
future. This just ensures that existing versions of Flox are able to
handle them in a graceful way.

The existing integration tests have been updated to account for the fact
that we now have a single executive and the file may be replaced. It was
easier to combine both the unhappy and happy paths in a single test
because we need to restore it for `wait_for_activations` to succeed.

The more specific variations are now covered by unit tests.

--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -25,6 +25,8 @@ time.workspace = true
 thiserror.workspace = true
 schemars.workspace = true
 
+[dev-dependencies]
+indoc.workspace = true
 
 [features]
 default = ["proc_status"]
