refactor(activations): Move state test_helpers
So that they're shared across crates. Put behind a feature flag so that
we don't build them into the release binaries.

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -33,6 +33,7 @@ tempfile.workspace = true
 
 
 [dev-dependencies]
+flox-core = { workspace = true, features = ["tests"] }
 nix.workspace = true
 temp-env.workspace = true
 pretty_assertions.workspace = true
