--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -669,6 +669,32 @@ post_cmd = '''
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
 '''
 
+[envs.flake_bash]
+skip_if_output_exists = "envs/flake_bash"
+files = ["envs/flake_bash/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/flake_bash"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
+
+[envs.flake_hello]
+skip_if_output_exists = "envs/flake_hello"
+files = ["envs/flake_hello/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/flake_hello"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
+
 [envs.kitchen_sink]
 skip_if_output_exists = "envs/kitchen_sink"
 files = ["envs/kitchen_sink/manifest.toml"]
