refactor(activations): Merge flox_watchdog crate
Merge `flox_watchdog` into `flox_activations::cli::executive` and remove
all references to "watchdog" now that it's not built and run as a
separate binary.

This is primarily motivated by needing `EnvDiff` to start
`process-compose` from the executive. I don't want to move it to
`flox_core` when it shouldn't be used outside of `flox_activations`.

However it also satisfies Michael's request that we don't refer to the
name "watchdog" in the new architecture from the Dec/Jan '25 activate
refactor.

I'm only making minimal changes in this commit so that git preserves the
file renames and makes it easier to review. Some functionality will be
moved around in subsequent commits.

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -16,8 +16,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
 tracing-appender = "0.2"
 flox-core.workspace = true
-flox-watchdog.workspace = true
 fslock.workspace = true
+glob = "0.3.3"
 nix.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -31,6 +31,8 @@ shell_gen = { path = "../shell_gen" }
 dirs.workspace = true
 tempfile.workspace = true
 
+[target.'cfg(target_os = "macos")'.dependencies]
+kqueue.workspace = true
 
 [dev-dependencies]
 flox-core = { workspace = true, features = ["tests"] }
@@ -38,3 +40,6 @@ nix.workspace = true
 temp-env.workspace = true
 pretty_assertions.workspace = true
 expect-test.workspace = true
+
+[target.'cfg(target_os = "linux")'.dev-dependencies]
+procfs = "0.18.0"
