--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -3,7 +3,6 @@ members = [
     "catalog-api-v1",
     "flox",
     "flox-rust-sdk",
-    "flox-watchdog",
     "flox-activations",
     "flox-core",
     "flox-test-utils",
@@ -34,7 +33,6 @@ flox-activations = { path = "flox-activations" }
 flox-core = { path = "flox-core" }
 flox-rust-sdk = { path = "flox-rust-sdk" }
 flox-test-utils = { path = "flox-test-utils" }
-flox-watchdog = { path = "flox-watchdog" }
 fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
@@ -112,7 +110,7 @@ serial_test = "3.3.1"
 temp-env = "0.3.2"
 expect-test = "1"
 
-# watchdog dependencies
+# executive/monitoring dependencies
 kqueue = "1.1.1"
 signal-hook = "0.4.1"
 
