fix(services): Prevent [re]start from hooks
Return an error if `flox services start` or `flox services restart` are
called from `hook.on-activate` in order to prevent deadlocks now that:

- hooks may not be run concurrently for different store paths of an environment
- activate will keep retrying with a warning, instead of timing out with an error

We use the store path and ancestry of the blocking PID to prevent
false-positive warnings from other `flox services` processes which may
still happen concurrently with an activation but will retry and warn
with feedback.

--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -19,6 +19,7 @@ proptest-derive.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 shell_gen = { path = "../shell_gen" }
+sysinfo.workspace = true
 tracing.workspace = true
 tempfile.workspace = true
 time.workspace = true
