--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -48,6 +48,7 @@ proptest-derive = { workspace = true, optional = true }
 http.workspace = true
 httpmock.workspace = true
 schemars = { workspace = true, features = ["chrono04"] }
+flox-manifest.workspace = true
 
 # Optional dependencies for GSSAPI authentication
 libgssapi = { workspace = true, optional = true }
@@ -65,6 +66,7 @@ tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
 catalog-api-v1 = { workspace = true, features = ["tests"] }
 sentry = { workspace = true, features = ["test"] }
+flox-manifest = { workspace = true, features = ["tests"]}
 
 
 [features]
