feat: add flox-manifest crate

--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -13,9 +13,9 @@ derive_more.workspace = true
 fslock.workspace = true
 log.workspace = true
 # should be a dev-dependency but test doesn't apply across crates
-proptest.workspace = true
+proptest = { optional = true, workspace = true }
 # should be a dev-dependency but test doesn't apply across crates
-proptest-derive.workspace = true
+proptest-derive = { optional = true, workspace = true }
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
@@ -23,8 +23,15 @@ tempfile.workspace = true
 time.workspace = true
 thiserror.workspace = true
 schemars.workspace = true
+regex.workspace = true
+serde_with.workspace = true
+shell-escape.workspace = true
 
 
 [features]
 default = ["proc_status"]
 proc_status = []
+tests = [
+    "dep:proptest",
+    "dep:proptest-derive",
+]
