--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,9 +7,10 @@ members = [
     "flox-activations",
     "flox-core",
     "flox-test-utils",
+    "flox-manifest",
     "mk_data",
     "systemd",
-    "xtask",
+    "xtask"
 ]
 default-members = ["flox", "flox-watchdog", "flox-activations"]
 
@@ -33,6 +34,8 @@ flox-activations = { path = "flox-activations" }
 flox-core = { path = "flox-core" }
 flox-rust-sdk = { path = "flox-rust-sdk" }
 flox-test-utils = { path = "flox-test-utils" }
+flox-manifest = { path = "flox-manifest" }
+flox-lockfile = { path = "flox-lockfile" }
 fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
