--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -54,6 +54,7 @@ xdg.workspace = true
 flox-core.workspace = true
 sapling-renderdag = "0.1.0"
 minus = { version = "5.6.1", features = ["static_output", "search"] }
+flox-manifest.workspace = true
 
 [dev-dependencies]
 catalog-api-v1.workspace = true
@@ -67,6 +68,7 @@ tempfile.workspace = true
 toml.workspace = true
 flox-rust-sdk = { workspace = true, features = ["tests"] }
 flox-test-utils.workspace = true
+flox-core = { workspace = true, features = ["tests"] }
 
 
 [features]
