feat(nef): provide catalog inputs to nef builds
* factor out instantiation of pacakge sets,
  into a new library function `lib.nef.instantiate { nixpkgs, pkgsDir}`.
  
* read catalog lock, instantiate sub-catalogs and expose its packages
  to nef builds as `catalogs.<catalog>.<package>`.

--- a/package-builder/Makefile
+++ b/package-builder/Makefile
@@ -1,7 +1,7 @@
 .DEFAULT_GOAL := all
 
 ALL = validate-build flox-build.mk build-manifest.nix nef/default.nix \
-  $(addprefix nef/lib/,default.nix dirToAttrs.nix extendAttrSet.nix mkOverlay.nix reflect.nix)
+  $(addprefix nef/lib/,default.nix dirToAttrs.nix extendAttrSet.nix instantiate.nix mkOverlay.nix reflect.nix)
 
 OS := $(shell uname -s)
 ifeq (Linux,$(OS))
