--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -54,6 +54,7 @@ flox-core.workspace = true
 sapling-renderdag = "0.1.0"
 shell_gen = { path = "../shell_gen" }
 minus = { version = "5.6.1", features = ["static_output", "search"] }
+nef-lock-catalog.workspace = true
 
 [dev-dependencies]
 catalog-api-v1.workspace = true
