--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "shell_gen",
     "systemd",
     "xtask",
+    "nef-lock-catalog",
 ]
 default-members = ["flox", "flox-activations"]
 
@@ -33,6 +34,7 @@ flox-activations = { path = "flox-activations" }
 flox-core = { path = "flox-core" }
 flox-rust-sdk = { path = "flox-rust-sdk" }
 flox-test-utils = { path = "flox-test-utils" }
+"nef-lock-catalog" = { path = "nef-lock-catalog" }
 fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
