feat: basic very unperformant catalog locking
Allow locking of floxhub provided catalogs, by

1. fetch all pacakges of the catalof
2. for each catalog retrieve its base url, and rev to create a locked url

Note:

This is a PREVIEW of nef phase 3!

`publish`ed pacakges use whatever url was set as a remote
in the original git repo. Unfortunately git uses an extended idea
of a url, git urls like `git@github.com:flox/flox`
are _not valid URLs_ and crucially are not recognized by nix.
Normailizing and fixing such urls is left to the prioper phase 3 efforts.

--- a/cli/nef-lock-catalog/Cargo.toml
+++ b/cli/nef-lock-catalog/Cargo.toml
@@ -12,3 +12,7 @@ serde.workspace = true
 indexmap.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+catalog-api-v1 = { path = "../catalog-api-v1" }
+reqwest = { workspace = true }
+tokio.workspace = true
+pollster.workspace = true
