--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -68,9 +68,9 @@ sentry = { workspace = true, features = ["test"] }
 
 
 [features]
-# Catalog authentication strategies (mutually exclusive)
+# Catalog authentication strategy
+# GSSAPI/Kerberos is available when this feature is enabled
 catalog-auth-gssapi = ["dep:libgssapi", "dep:base64"]
-catalog-auth-bearer = []
 
 # allow exporting test helpers in dev mode only
 tests = [
