chore(metrics): Move init_sentry to flox-core
So that it can be re-used by `flox-activations`. It now takes a release
name and UUID as required args.

This highlighted that our very first initialisation of Sentry happened
before we'd written a metrics UUID (if metrics are enabled). Fix this by
doing the init earlier and printing a warning if it fails.

--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -17,6 +17,7 @@ log.workspace = true
 proptest.workspace = true
 # should be a dev-dependency but test doesn't apply across crates
 proptest-derive.workspace = true
+sentry.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 shell_gen = { path = "../shell_gen" }
@@ -27,6 +28,7 @@ tempfile.workspace = true
 time.workspace = true
 thiserror.workspace = true
 schemars.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 indoc.workspace = true
