--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -19,6 +19,7 @@ flox-core.workspace = true
 fslock.workspace = true
 glob = "0.3.3"
 nix.workspace = true
+sentry.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 shell-escape.workspace = true
@@ -30,6 +31,7 @@ itertools.workspace = true
 shell_gen = { path = "../shell_gen" }
 dirs.workspace = true
 tempfile.workspace = true
+uuid.workspace = true
 waitpid-any = "0.3.0"
 notify = "6"
 
