feat(catalog): extract catalog client wrapper to share between crates
* `CatalogClientConfig` for client configuration
* `CatalogClientError` and `MapApiErrorExt`
* `CatalogClient` wrapper and constructor setting up bearer token auth
* `MockGuard/MockRecorder` for httpmock recording/replay
* Re-exports catalog-api-v1 types for consumers

Types are almost entirely **copied** from the provider in the sdk,
there is no net new here.
The motivation behind this is to enable other crates like
`nef-lock-catalog` to share access to the catalog
without depending on the full SDK.
Its currently unclear whether the SDK will be
a direct consumer of `nef-lock-catalog` (currently its only used from the
`flox` CLI crate).
A direct use of the locking crate by the SDK would however be prevented
by the circular dependency that would create.
Alternatively we could fold `nef-lock-catalog` into `flox-rust-sdk`.
This would _increase_ coupling and prevent e.g. the `nef` unit tests from
creating mock data without the entire `flox` cli present which causes its
own issue around circles.

The following commit is integrating this crate back into the SDK crate.
This is close to the minimum of functionality required
to share some higer level interfaces to the catalog.
Building on that the last two commits extract all other non SDK specific
types (errors, depaging, etc.) as well, nearly replacing
the `catalog` provider.

DISCLAIMER:
The extraction was largely done by Claude, following the extraction plan
documented on forge with posthum fixups by hand.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "cli/flox",
     "cli/flox-rust-sdk",
     "cli/flox-activations",
+    "cli/flox-catalog",
     "cli/flox-core",
     "cli/flox-test-utils",
     "cli/mk_data",
@@ -21,6 +22,7 @@ async-stream = "0.3.6"
 blake3 = "1.8.2"
 bpaf = { version = "0.9.22", features = ["derive", "autocomplete"] }
 catalog-api-v1 = { path = "cli/catalog-api-v1" }
+flox-catalog = { path = "cli/flox-catalog" }
 chrono = { version = "0.4.43", features = ["serde"] }
 clap = { version = "4.5.56", features = ["derive"] }
 close_fds = "0.3"
