refactor(sdk): Use flox-catalog for shared types
Import CatalogClientConfig, CatalogMockMode, CatalogClientError, and
MapApiErrorExt from the new flox-catalog crate instead of defining
them locally.

--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 [dependencies]
 async-stream.workspace = true
 catalog-api-v1.workspace = true
+flox-catalog = { workspace = true }
 chrono.workspace = true
 derive_more.workspace = true
 enum_dispatch.workspace = true
