feat(flox-catalog): Add ClientTrait, types, and operation errors
Phase 2 of flox-catalog extraction: extract the complete catalog
interaction layer.

Moved to the flox-catalog crate:
* `ClientTrait`: full catalog API interface
  implemented via the REST bindings
* `types.rs`: Re-exports of the canonical API types
  and higher level convenience types.
  Specifically,
  - `ResolutionMessage` extraction and custom wrapping of these messages
  - Handling of paged APIs via `ResultsPage` and driver functions 
  - A higler level `BaseCatalogInfo` abstraction.
* Operation errors: SearchError, ResolveError, VersionsError,
  PublishError
* Helper functions: depaging stream, name validation

The SDK retains its own copies of these types for now. The next
commit will remove the SDK duplicates and switch to flox-catalog
imports.

The motivation here was to complete the speration of the catalog
access subsystem
a) for resuse and
b) to allow use of the interface server side
   via specialized implementations.

--- a/cli/flox-catalog/Cargo.toml
+++ b/cli/flox-catalog/Cargo.toml
@@ -4,22 +4,29 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-stream.workspace = true
 catalog-api-v1.workspace = true
 derive_more.workspace = true
+futures.workspace = true
 http.workspace = true
 reqwest.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 url.workspace = true
 
-# Optional mock dependencies
-httpmock = { workspace = true, optional = true }
-serde_yaml = { workspace = true, optional = true }
+httpmock.workspace = true
+serde_yaml.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+serde_json.workspace = true
+itertools.workspace = true
+proptest.workspace = true
+sentry.workspace = true
+tracing-subscriber.workspace = true
 
 [features]
 default = []
-mock = ["dep:httpmock", "dep:serde_yaml"]
+tests = []
