refactor: move Cargo.toml to repo root
Currently you need to configure editors and other tools to locate the
`Cargo.toml` file under `/cli`. This removes the need to do that.

Example: running cargo commands from the repo root

```
# Before
$ cargo build --manifest-path ./cli/Cargo.toml

# After
$ cargo build
```

--- a/.github/workflows/nix-managed-lints.yml
+++ b/.github/workflows/nix-managed-lints.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           nix develop -L --no-update-lock-file --command \
             cargo fetch \
-            --manifest-path ./cli/Cargo.toml \
+            --manifest-path ./Cargo.toml \
             --locked;
 
       # Run pre-commit hooks on the diff between the target branch and HEAD.
