refactor(sdk): Remove duplicated types and use flox-catalog
Phase 2 of catalog-client extraction: remove duplicated type
definitions, trait, errors, and helpers from flox-rust-sdk and
switch to importing from `flox-catalog`.

Removed from SDK catalog.rs:
- ClientTrait definition (now imported from flox-catalog)
- CatalogClient struct and impl ClientTrait (use flox-catalog's)
- PackageGroup, ResolvedPackageGroup, CatalogPage, ResolutionMessage
  and all Msg* types (now imported from flox-catalog)
- SearchError, ResolveError, VersionsError, PublishError
- Helper functions (depaging stream, name validation)
- Type aliases (PublishResponse, StoreInfo, BaseCatalogInfo, etc.)

Updated:
- models/search.rs: removed, only contained reexports of catalog types
- Client enum: manual ClientTrait dispatch (replaces enum_dispatch
  which requires same-crate trait definition)
- MockClient: search/search_with_spinner take PackageSystem
  instead of System (trait signature change)
- flox binary call sites: explicit System -> PackageSystem conversion
- CatalogClient::new() callers: handle Result return type
- Private field access: use .api() and .reset_recording() methods

--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2024"
 
 [dependencies]
 async-stream.workspace = true
-catalog-api-v1.workspace = true
 flox-catalog = { workspace = true }
 chrono.workspace = true
 derive_more.workspace = true
@@ -60,8 +59,8 @@ tar.workspace = true
 temp-env.workspace = true
 tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
-catalog-api-v1 = { workspace = true, features = ["tests"] }
 sentry = { workspace = true, features = ["test"] }
+flox-catalog = { workspace = true, features = ["tests"] }
 
 
 [features]
