--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -15,6 +15,7 @@ close_fds.workspace = true
 crossterm.workspace = true
 derive_more.workspace = true
 dirs.workspace = true
+flox-catalog.workspace = true
 flox-rust-sdk.workspace = true
 fslock.workspace = true
 futures.workspace = true
@@ -56,7 +57,7 @@ shell_gen = { path = "../shell_gen" }
 minus = { version = "5.6.1", features = ["static_output", "search"] }
 
 [dev-dependencies]
-catalog-api-v1.workspace = true
+flox-catalog = { workspace = true, features = ["tests"] }
 pretty_assertions.workspace = true
 proptest.workspace = true
 proptest-derive.workspace = true
