--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -591,40 +591,40 @@ post_cmd = '''
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
 '''
 
-[envs.bash_v2_default]
-skip_if_output_exists = "envs/bash_v2_default"
-files = ["envs/bash_v2_default/manifest.toml"]
+[envs.bash_v1_10_0_default]
+skip_if_output_exists = "envs/bash_v1_10_0_default"
+files = ["envs/bash_v1_10_0_default/manifest.toml"]
 pre_cmd = "flox init"
 cmd = "flox edit -f manifest.toml"
 post_cmd = '''
     envs_output_dir="$(dirname $RESPONSE_FILE)"
-    env_dir="$envs_output_dir/bash_v2_default"
+    env_dir="$envs_output_dir/bash_v1_10_0_default"
     mkdir -p "$env_dir"
     cp .flox/env/manifest.toml "$env_dir/manifest.toml"
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
 '''
 
-[envs.bash_v2_all]
-skip_if_output_exists = "envs/bash_v2_all"
-files = ["envs/bash_v2_all/manifest.toml"]
+[envs.bash_v1_10_0_all]
+skip_if_output_exists = "envs/bash_v1_10_0_all"
+files = ["envs/bash_v1_10_0_all/manifest.toml"]
 pre_cmd = "flox init"
 cmd = "flox edit -f manifest.toml"
 post_cmd = '''
     envs_output_dir="$(dirname $RESPONSE_FILE)"
-    env_dir="$envs_output_dir/bash_v2_all"
+    env_dir="$envs_output_dir/bash_v1_10_0_all"
     mkdir -p "$env_dir"
     cp .flox/env/manifest.toml "$env_dir/manifest.toml"
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
 '''
 
-[envs.bash_v2_out]
-skip_if_output_exists = "envs/bash_v2_out"
-files = ["envs/bash_v2_out/manifest.toml"]
+[envs.bash_v1_10_0_out]
+skip_if_output_exists = "envs/bash_v1_10_0_out"
+files = ["envs/bash_v1_10_0_out/manifest.toml"]
 pre_cmd = "flox init"
 cmd = "flox edit -f manifest.toml"
 post_cmd = '''
     envs_output_dir="$(dirname $RESPONSE_FILE)"
-    env_dir="$envs_output_dir/bash_v2_out"
+    env_dir="$envs_output_dir/bash_v1_10_0_out"
     mkdir -p "$env_dir"
     cp .flox/env/manifest.toml "$env_dir/manifest.toml"
     cp .flox/env/manifest.lock "$env_dir/manifest.lock"
