--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -69,6 +69,7 @@ toml.workspace = true
 flox-rust-sdk = { workspace = true, features = ["tests"] }
 flox-test-utils.workspace = true
 flox-core = { workspace = true, features = ["tests"] }
+flox-manifest = { workspace = true, features = [ "tests" ]}
 
 
 [features]
