--- a/cli/xtask/Cargo.toml
+++ b/cli/xtask/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 anyhow.workspace = true
 clap.workspace = true
 flox-rust-sdk.workspace = true
+flox-manifest.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
